--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0
   freezed_annotation: ^0.15.0
+  flutter_bloc: ^7.3.3
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +50,8 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   build_runner: ^2.1.5
   freezed: ^0.15.0+1
+  mockito: ^5.0.16
+  bloc_test: ^8.5.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
