--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   dartz: ^0.10.0
   freezed_annotation: ^0.15.0
   flutter_bloc: ^7.3.3
+  firebase_core: ^1.10.0
+  firebase_auth: ^3.2.0
+  google_sign_in: ^5.2.1
 
 dev_dependencies:
   flutter_test:
