--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
   google_sign_in: ^5.2.1
+  get_it: ^7.2.0
+  injectable: ^1.5.0
+  another_flushbar: ^1.10.25
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +57,7 @@ dev_dependencies:
   freezed: ^0.15.0+1
   mockito: ^5.0.16
   bloc_test: ^8.5.0
+  injectable_generator: ^1.5.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
