--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get_it: ^7.2.0
   injectable: ^1.5.0
   another_flushbar: ^1.10.25
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_test:
