--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0
   freezed_annotation: ^0.15.0
-  flutter_bloc: ^7.3.3
+  flutter_bloc: ^8.0.0
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
   google_sign_in: ^5.2.1
@@ -43,6 +43,7 @@ dependencies:
   injectable: ^1.5.0
   another_flushbar: ^1.10.25
   uuid: ^3.0.5
+  auto_route: ^3.1.3
 
 dev_dependencies:
   flutter_test:
@@ -57,8 +58,9 @@ dev_dependencies:
   build_runner: ^2.1.5
   freezed: ^0.15.0+1
   mockito: ^5.0.16
-  bloc_test: ^8.5.0
+  bloc_test: ^9.0.1
   injectable_generator: ^1.5.2
+  auto_route_generator: ^3.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
