--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
   dartz: ^0.10.0
-  freezed_annotation: ^0.15.0
+  freezed_annotation: ^1.0.0
   flutter_bloc: ^8.0.0
   firebase_core: ^1.10.0
   firebase_auth: ^3.2.0
@@ -54,9 +54,9 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
   build_runner: ^2.1.5
-  freezed: ^0.15.0+1
+  freezed: ^1.0.0
   mockito: ^5.0.16
   bloc_test: ^9.0.1
   injectable_generator: ^1.5.2
