--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "flutter packages pub run build_runner build --delete-conflicting-outputs",
-    "build-watch": "flutter packages pub run build_runner watch --delete-conflicting-outputs",
+    "build:watch": "flutter packages pub run build_runner watch --delete-conflicting-outputs",
     "analyze": "flutter analyze",
     "test": "flutter test --coverage"
   }
